--- a/stylus/require/layouts.styl
+++ b/stylus/require/layouts.styl
@@ -70,6 +70,7 @@
 
 .wt_banner-message h1, .wt_banner-message a
     color white
+    text-align left
 
 /*------------------------------------*\
     ALERT
